--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
     left: 0;
     width: 100%;
     height: calc(100vh - 500px);
-    background: url('../imagens/bloco-super-mario.png') repeat-x;
+    background: url('imagens/bloco-super-mario.png') repeat-x;
     background-size: contain;
     z-index: 1;
 }
